--- a/css/links.css
+++ b/css/links.css
@@ -1,20 +1,21 @@
 header {
+    /*this is the styling for the header, each page has a slightly different gradient to put emphasis on which page you are on*/
     background-image: linear-gradient(to right, black, rgb(53, 17, 0), orange, brown, rgb(53, 17, 0), black);
     min-height: 40px;
     border-bottom-style: double;
     border-color: #d6b547;
 }
-
+/*wiggle room to prevent overlap*/
 header, nav, section {
     padding: 10px;
 }
-
+/*navbar styling setting the grid*/
 .topbar_container {
     display: grid;
     grid-template-columns: 10% 90%;
     align-items: end;
 }
-
+/*navbar list*/
 Nav ul {
     display: flex;
     justify-content: space-around;
@@ -22,7 +23,7 @@ Nav ul {
     margin: 0;
     padding: 0;
 }
-
+/*making the navbar pretty this one is specifically for wider viewports*/
 Nav li {
     color: white;
     text-shadow: rgba(145, 82, 0, 0.76) 2px 0 6px;
@@ -58,13 +59,13 @@ li a:hover {
     -webkit-transition: 0.2s;
     transition: 0.2s;
 }
-
+/*this is the transition to the "mobile view" for the nav menu*/
 @media only screen and (max-width: 550px) {
     .topbar_container {
         display: block;
         grid-template-columns: 1fr 1fr;
     }
-
+/*moving the logo from the left to center*/
     .logo {
         text-align: center;
     }
@@ -72,7 +73,7 @@ li a:hover {
     #nav {
         display: none;
     }
-
+/*styling for the mobile view*/
     .bar {
         display: block;
         text-align: center;
@@ -97,9 +98,11 @@ li a:hover {
 }
 
 body {
+    /*a little bit of padding on the sides as requested*/
     padding-left: 25px;
     padding-right: 25px;
     color: white;
+    /*making the black background for the page less boring*/
     background-image: url(/img/jeff.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -111,6 +114,7 @@ body {
     padding-left: 25px;
     padding-right: 25px;
     font-family: segoe-ui_normal, Segoe UI, Segoe, Segoe WP, Helvetica Neue, Helvetica, sans-serif;
+    /*grid layout styling for the content*/
     display: grid;
     grid-template-areas:
       "section section section";
@@ -120,7 +124,7 @@ body {
     height: 100vh;
     margin: 10px;
   }
-  
+  /*just making the images behave*/
   img {
     width: 100%;
     height: auto;
@@ -131,7 +135,7 @@ body {
     flex-wrap: wrap;
     grid-area: section;
   }
-  
+  /*styling for the article elements within the section*/
   article {
     padding: 10px;
     margin: 10px;
@@ -139,6 +143,6 @@ body {
     text-shadow: rgb(231, 159, 65) 1px 1px;
   }
 
-  footer {
+  footer { /*a little shadow so you can read the footer*/
     text-shadow: rgb(168, 98, 7) 1px 1px;
   }
